prometheus/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
